5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1671_1107.log
== TEST (2019-04-29 13:56:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("Entre com o numero do dia de hoje: "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if dia_semana == 0:
	print("- > Domingo")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:45:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_semana
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
-- EXECUTION TIME:
0.151166
-- ERROR:
  File "/home/codebench/codes/1671/1107/main.py", line 32
    if dia_semana == 0 
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:45:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_semana
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
-- ERROR:
File "XXXX", line 32
    if dia_semana == 0 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:45:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_semana
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
-- EXECUTION TIME:
0.140878
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:

-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:45:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_semana
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
-- ERROR:
File "XXXX", line 32
    if dia_semana == 0 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:48:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_semana
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
	
if (dia_semana <0) or (dia_semana > 6):
	print("A entrada", dia_semana, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", dia_fut)
-- EXECUTION TIME:
0.191842
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 1024
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:48:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_fut
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
	
if (dia_semana <0) or (dia_semana > 6):
	print("A entrada", dia_semana, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", dia_fut)
-- EXECUTION TIME:
0.264633
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 1024
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:48:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_fut
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
	
if (dia_semana <0) or (dia_semana > 6):
	print("A entrada", dia_semana, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", dia_fut)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:48:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_fut
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
	
if (dia_semana <0) or (dia_semana > 6):
	print("A entrada", dia_semana, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", dia_fut)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:49:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_fut
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
	
if (dia_semana <0) or (dia_semana > 6):
	print("A entrada", dia_semana, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", dia_fut)
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:49:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

dia_semana = int(input("dia: (0 a 6) "))
dia_fut = int(input("Entre com o numero de dias apos hoje: "))

if (dia_semana < 0) or (dia_semana > 6):
	sol = 7
elif ((dia_semana+dia_fut) < 7):
	sol = dia_semana + dia_fut
else:
	sol = ((dia_semana+dia_fut) % 7)
	
if sol == 0:
	esp = "domingo"
elif sol == 1:
	esp = "segunda"
elif sol == 2:
	esp = "terça"
elif sol == 3:
	esp = "quarta"
elif sol == 4:
	esp = "quinta"
elif sol == 5:
	esp = "sexta"
elif sol == 6:
	esp = "sabado"
else:
	esp = "inexistente"
	
if dia_semana == 0: 
	dia = "domingo"
elif dia_semana == 1:
	dia = "segunda"
elif dia_semana == 2:
	dia = "terça"
elif dia_semana == 3:
	dia = "quarta"
elif dia_semana == 4:
	dia = "quinta"
elif dia_semana == 5:
	dia = "sexta"
else:
	dia = "sabado"	
	
if (dia_semana <0) or (dia_semana > 6):
	print("A entrada", dia_semana, "eh invalida")
else:
	print("Hoje eh", dia, "e o dia futuro eh", esp)
-- EXECUTION TIME:
0.142918
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
